--- a/RReviews/RReviews.Web/RReviews.Web.csproj
+++ b/RReviews/RReviews.Web/RReviews.Web.csproj
@@ -195,8 +195,11 @@
     <Content Include="Views\Restaurant\Edit.cshtml" />
     <Content Include="Views\Restaurant\Delete.cshtml" />
     <Content Include="Views\Review\Details.cshtml" />
-    <Content Include="Views\Search\SearchPartialNamePartial.cshtml" />
+    <Content Include="Views\Search\SearchPartial.cshtml" />
     <Content Include="Views\Search\SearchAlphaPartial.cshtml" />
+    <Content Include="Views\Review\Create.cshtml" />
+    <Content Include="Views\Review\Delete.cshtml" />
+    <Content Include="Views\Review\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
