--- a/RReviews/RReviews.Web/RReviews.Web.csproj
+++ b/RReviews/RReviews.Web/RReviews.Web.csproj
@@ -172,6 +172,7 @@
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
