--- a/RReviews/JenkinsFIle
+++ b/RReviews/JenkinsFIle
@@ -21,7 +21,7 @@ node('master'){
     }
     stage('deploy'){
         dir("RReviews\\RReviews.Web\\obj\\Debug\\Package"){
-            bat "\"C:\\Program Files\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe\" -source:package='C:\\Program Files (x86)\\Jenkins\\workspace\\Project_1\\RReviews\\RReviews.Web\\obj\\Debug\\Package\\RReviews.Web.zip' -dest:auto,computerName=\"https://ec2-18-218-161-89.us-east-2.compute.amazonaws.com:8172/msdeploy.axd\",userName=\"Administrator\",password=\"${env.Deploy_Password}\",authtype=\"basic\",includeAcls=\"False\" -verb:sync -disableLink:AppPoolExtension -disableLink:ContentExtension -disableLink:CertificateExtension -setParamFile:\"C:\\Program Files (x86)\\Jenkins\\workspace\\Project_1\\RReviews\\RReviews.Web\\obj\\Debug\\Package\\RReviews.Web.SetParameters.xml\" -AllowUntrusted=True"
+            bat "\"C:\\Program Files\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe\" -source:package='C:\\Program Files (x86)\\Jenkins\\workspace\\Project_1\\RReviews\\RReviews.Web\\obj\\Debug\\Package\\RReviews.Web.zip' -dest:auto,computerName=\"https://ec2-18-218-161-89.us-east-2.compute.amazonaws.com:8172/msdeploy.axd\",userName=\"Administrator\",password=\"Playhocke7\",authtype=\"basic\",includeAcls=\"False\" -verb:sync -disableLink:AppPoolExtension -disableLink:ContentExtension -disableLink:CertificateExtension -setParamFile:\"C:\\Program Files (x86)\\Jenkins\\workspace\\Project_1\\RReviews\\RReviews.Web\\obj\\Debug\\Package\\RReviews.Web.SetParameters.xml\" -AllowUntrusted=True"
         }
     }
 }
