--- a/RReviews/JenkinsFIle
+++ b/RReviews/JenkinsFIle
@@ -3,9 +3,14 @@ node('master'){
         git 'https://github.com/1804-Apr-USFdotnet/keenan-baynard-project1.git'
     }
     stage('build'){
+        try{
         dir('RReviews'){
             bat 'nuget restore'
             bat 'msbuild'
+        }
+        }
+        catch(exc){
+            slackSend 'build failed!'
         }
     }
     stage('test'){
@@ -20,8 +25,13 @@ node('master'){
         }
     }
     stage('deploy'){
+        try{
         dir("RReviews\\RReviews.Web\\obj\\Debug\\Package"){
             bat "\"C:\\Program Files\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe\" -source:package='C:\\Program Files (x86)\\Jenkins\\workspace\\Project_1\\RReviews\\RReviews.Web\\obj\\Debug\\Package\\RReviews.Web.zip' -dest:auto,computerName=\"https://ec2-18-218-161-89.us-east-2.compute.amazonaws.com:8172/msdeploy.axd\",userName=\"Administrator\",password=\"Playhocke7\",authtype=\"basic\",includeAcls=\"False\" -verb:sync -disableLink:AppPoolExtension -disableLink:ContentExtension -disableLink:CertificateExtension -setParamFile:\"C:\\Program Files (x86)\\Jenkins\\workspace\\Project_1\\RReviews\\RReviews.Web\\obj\\Debug\\Package\\RReviews.Web.SetParameters.xml\" -AllowUntrusted=True"
+        }
+        }
+        catch(exc){
+            slackSend 'deploy failed'
         }
     }
 }
