--- a/RReviews/JenkinsFIle
+++ b/RReviews/JenkinsFIle
@@ -4,18 +4,24 @@ node('master'){
     }
     stage('build'){
         try{
-        dir('RReviews'){
-            bat 'nuget restore'
-            bat 'msbuild'
+            dir('RReviews'){
+                bat 'nuget restore'
+                bat 'msbuild /p:MvcBuildViews=true'
         }
         }
         catch(exc){
-            slackSend 'build failed!'
+            slackError('build')
             throw exc
         }
     }
     stage('test'){
-        //bat "VSTest.Console RReviews\\RReviews.WebUnitTest\\bin\\Debug\\RReviews.WebUnitTests.dll"
+        try{
+            bat "VSTest.Console RReviews\\RReviews.WebUnitTest\\bin\\Debug\\RReviews.WebUnitTests.dll"
+        }
+        catch(exc){
+            slackError('test')
+            throw exc
+        }
     }
     stage('analyze'){
         
@@ -27,13 +33,17 @@ node('master'){
     }
     stage('deploy'){
         try{
-        dir("RReviews\\RReviews.Web\\obj\\Debug\\Package"){
-            bat "\"C:\\Program Files\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe\" -source:package='C:\\Program Files (x86)\\Jenkins\\workspace\\Project_1\\RReviews\\RReviews.Web\\obj\\Debug\\Package\\RReviews.Web.zip' -dest:auto,computerName=\"https://ec2-18-218-161-89.us-east-2.compute.amazonaws.com:8172/msdeploy.axd\",userName=\"Administrator\",password=\"Playhocke7\",authtype=\"basic\",includeAcls=\"False\" -verb:sync -disableLink:AppPoolExtension -disableLink:ContentExtension -disableLink:CertificateExtension -setParamFile:\"C:\\Program Files (x86)\\Jenkins\\workspace\\Project_1\\RReviews\\RReviews.Web\\obj\\Debug\\Package\\RReviews.Web.SetParameters.xml\" -AllowUntrusted=True"
+            dir("RReviews\\RReviews.Web\\obj\\Debug\\Package"){
+                bat "\"C:\\Program Files\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe\" -source:package='C:\\Program Files (x86)\\Jenkins\\workspace\\Project_1\\RReviews\\RReviews.Web\\obj\\Debug\\Package\\RReviews.Web.zip' -dest:auto,computerName=\"https://ec2-18-218-161-89.us-east-2.compute.amazonaws.com:8172/msdeploy.axd\",userName=\"Administrator\",password=\"Playhocke7\",authtype=\"basic\",includeAcls=\"False\" -verb:sync -disableLink:AppPoolExtension -disableLink:ContentExtension -disableLink:CertificateExtension -setParamFile:\"C:\\Program Files (x86)\\Jenkins\\workspace\\Project_1\\RReviews\\RReviews.Web\\obj\\Debug\\Package\\RReviews.Web.SetParameters.xml\" -AllowUntrusted=True"
         }
         }
         catch(exc){
-            slackSend 'deploy failed'
+            slackError('deploy')
             throw exc
         }
     }
+}
+
+def slackError(stageName) {
+    slackSend color: 'danger', message: "${stageName} stage failed. [<${JOB_URL}|${env.JOB_NAME}> <${env.BUILD_URL}console|${env.BUILD_DISPLAY_NAME}>] [${currentBuild.durationString[0..-14]}]"
 }
