--- a/RReviews/JenkinsFIle
+++ b/RReviews/JenkinsFIle
@@ -26,9 +26,9 @@ node('master'){
     stage('analyze'){
         try{
             dir('RReviews'){
-                bat 'SonarQube.Scanner.MSBuild.exe begin /k:project1-kb /v:0.1.0'
+                bat 'SonarScanner.MSBuild.exe begin /k:project1-kb /v:0.1.0'
                 bat 'msbuild /t:rebuild'
-                bat 'SonarQube.Scanner.MSBuild.exe'
+                bat 'SonarScanner.MSBuild.exe end'
             }
         }
         catch(exc){
