--- a/RReviews/JenkinsFIle
+++ b/RReviews/JenkinsFIle
@@ -16,7 +16,7 @@ node('master'){
     }
     stage('test'){
         try{
-            //bat "VSTest.Console RReviews\\RReviews.WebUnitTests\\bin\\Debug\\RReviews.WebUnitTests.dll"
+            //bat "VSTest.Console "
         }
         catch(exc){
             slackError('test')
@@ -51,6 +51,7 @@ node('master'){
         try{
             dir("RReviews\\RReviews.Web\\obj\\Debug\\Package"){
                 bat "\"C:\\Program Files\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe\" -source:package='C:\\Program Files (x86)\\Jenkins\\workspace\\Project_1\\RReviews\\RReviews.Web\\obj\\Debug\\Package\\RReviews.Web.zip' -dest:auto,computerName=\"https://ec2-13-59-126-130.us-east-2.compute.amazonaws.com:8172/msdeploy.axd\",userName=\"Administrator\",password=\"Playhocke7\",authtype=\"basic\",includeAcls=\"False\" -verb:sync -disableLink:AppPoolExtension -disableLink:ContentExtension -disableLink:CertificateExtension -setParamFile:\"C:\\Program Files (x86)\\Jenkins\\workspace\\Project_1\\RReviews\\RReviews.Web\\obj\\Debug\\Package\\RReviews.Web.SetParameters.xml\" -AllowUntrusted=True"
+                slackSend message:"Deployment Complete"
         }
         }
         catch(exc){
